--- a/src/components/hero.module.scss
+++ b/src/components/hero.module.scss
@@ -1,3 +1,15 @@
 .hero-bg {
   background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='white' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
 }
+
+.ghicon:hover {
+  filter: invert(0.6)
+}
+
+.lnicon:hover {
+  fill: #0077B5
+}
+
+.twicon:hover {
+  fill: #00aced
+}
