Updated blog page layout

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -83,11 +83,21 @@ html {
 
 main {
   min-height: 100vh;
-  margin: 0;
   display: grid;
   grid-template-rows: 1fr auto;
 }
 
 .footer {
   grid-row: 2 / 3;
+}
+
+// Equal card height
+.card-equal-height {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.card-equal-height .card-footer {
+  margin-top: auto;
 }
