--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,31 +1,88 @@
 // Import a Google Font
 @import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
 
+// 5. Add new color variables to the color map.
+@import "~bulma/sass/utilities/initial-variables.sass";
+@import "~bulma/sass/utilities/functions.sass";
+
 // Set your brand colors
-$purple: #8a4d76;
+$purple: #639;
 $pink: #fa7c91;
 $brown: #757763;
 $beige-light: #d0d1cd;
 $beige-lighter: #eff0eb;
 
 // Update Bulma's global variables
-$family-sans-serif: "Nunito", sans-serif;
+// $family-sans-serif: "Nunito", sans-serif;
 // $grey-dark: $brown;
 // $grey-light: $beige-light;
-// $primary: $purple;
-// $link: $pink;
+$primary: $purple;
+$link: $primary;
+
+$primary-light: findLightColor($primary);
+$primary-light-invert: findColorInvert($primary-light);
 
 // Update some of Bulma's component variables
-// $body-background-color: $beige-lighter;
+// $body-background-color: $primary-light;
 // $control-border-width: 2px;
 // $input-border-color: transparent;
 // $input-shadow: none;
 
+// 4. Setup your Custom Colors
+$propelld: #172c82;
+$propelld-invert: findColorInvert($propelld);
+$iisc: #231f20;
+$iisc-invert: findColorInvert($iisc);
+$techm: #dc203a;
+$techm-invert: findColorInvert($techm);
+$linkedin: #0077b5;
+$linkedin-invert: findColorInvert($linkedin);
+$twitter: #55acee;
+$twitter-invert: findColorInvert($twitter);
+$github: #333;
+$github-invert: findColorInvert($github);
+
+@import "~bulma/sass/utilities/derived-variables.sass";
+$addColors: (
+  "primary-light": (
+    $primary-light,
+    $primary-light-invert,
+  ),
+  "twitter": (
+    $twitter,
+    $twitter-invert,
+  ),
+  "linkedin": (
+    $linkedin,
+    $linkedin-invert,
+  ),
+  "github": (
+    $github,
+    $github-invert,
+  ),
+  "techm": (
+    $techm,
+    $techm-invert,
+  ),
+  "iisc": (
+    $iisc,
+    $iisc-invert,
+  ),
+  "propelld": (
+    $propelld,
+    $propelld-invert,
+  ),
+);
+$colors: map-merge($colors, $addColors);
+
 // Import only what you need from Bulma
-@import "~bulma/sass/utilities/_all.sass";
+@import "~bulma/sass/utilities/animations.sass";
+@import "~bulma/sass/utilities/controls.sass";
+@import "~bulma/sass/utilities/mixins.sass";
 
 @import "~bulma/sass/base/_all.sass";
 
+@import "~bulma/sass/elements/box.sass";
 @import "~bulma/sass/elements/button.sass";
 @import "~bulma/sass/elements/container.sass";
 @import "~bulma/sass/elements/title.sass";
@@ -40,6 +97,7 @@ $family-sans-serif: "Nunito", sans-serif;
 
 @import "~bulma/sass/components/navbar.sass";
 @import "~bulma/sass/components/card.sass";
+@import "~bulma/sass/components/level.sass";
 
 @import "~bulma/sass/layout/_all.sass";
 
@@ -47,6 +105,7 @@ $family-sans-serif: "Nunito", sans-serif;
 @import "~bulma-divider/dist/css/bulma-divider.sass";
 @import "~bulma-pageloader/dist/css/bulma-pageloader.sass";
 @import "~bulma-tooltip/dist/css/bulma-tooltip.sass";
+@import "~bulma-timeline/dist/css/bulma-timeline.sass";
 
 @import "~rbx/rbx.sass";
 
@@ -100,4 +159,66 @@ main {
 
 .card-equal-height .card-footer {
   margin-top: auto;
+}
+
+// Scroll down animation
+.chevron {
+  padding: 0;
+  margin: 0;
+  opacity: 0;
+  transform: scale3d(0.5, 0.5, 0.5);
+  animation: move 3s ease-out infinite;
+}
+
+.chevron:first-child {
+  animation: move 3s ease-out 1s infinite;
+}
+
+.chevron:nth-child(2) {
+  animation: move 3s ease-out 2s infinite;
+}
+
+.chevron:before,
+.chevron:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 51%;
+  background: #639;
+}
+
+.chevron:before {
+  left: 0;
+  transform: skew(0deg, 30deg);
+}
+
+.chevron:after {
+  right: 0;
+  width: 50%;
+  transform: skew(0deg, -30deg);
+}
+
+@keyframes move {
+  25% {
+    opacity: 1;
+  }
+  33% {
+    opacity: 1;
+    transform: translateY(30px);
+  }
+  67% {
+    opacity: 1;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(55px) scale3d(0.5, 0.5, 0.5);
+  }
+}
+
+@keyframes pulse {
+  to {
+    opacity: 1;
+  }
 }
