--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,32 +1,17 @@
-// Import a Google Font
-@import url("https://fonts.googleapis.com/css?family=Nunito:400,700");
-
-// 5. Add new color variables to the color map.
+// Add new color variables to the color map.
 @import "~bulma/sass/utilities/initial-variables.sass";
 @import "~bulma/sass/utilities/functions.sass";
+@import "~bulma/sass/utilities/derived-variables.sass";
 
 // Set your brand colors
 $purple: #639;
-$pink: #fa7c91;
-$brown: #757763;
-$beige-light: #d0d1cd;
-$beige-lighter: #eff0eb;
 
 // Update Bulma's global variables
-// $family-sans-serif: "Nunito", sans-serif;
-// $grey-dark: $brown;
-// $grey-light: $beige-light;
 $primary: $purple;
 $link: $primary;
 
 $primary-light: findLightColor($primary);
 $primary-light-invert: findColorInvert($primary-light);
-
-// Update some of Bulma's component variables
-// $body-background-color: $primary-light;
-// $control-border-width: 2px;
-// $input-border-color: transparent;
-// $input-shadow: none;
 
 // 4. Setup your Custom Colors
 $propelld: #172c82;
@@ -42,7 +27,6 @@ $twitter-invert: findColorInvert($twitter);
 $github: #333;
 $github-invert: findColorInvert($github);
 
-@import "~bulma/sass/utilities/derived-variables.sass";
 $addColors: (
   "primary-light": (
     $primary-light,
