--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -1,13 +1,10 @@
 @import "~bulma/sass/utilities/initial-variables";
 @import "~bulma/sass/utilities/functions";
 
-// Set your brand colors
-$purple: #639;
-
 // Update Bulma's global variables
 
-$primary: $purple;
-$primary-invert: findColorInvert($purple);
+$primary: #663399;
+$primary-invert: findColorInvert($primary);
 $primary-light: findLightColor($primary);
 $primary-light-invert: findColorInvert($primary-light);
 $primary-dark: findDarkColor($primary);
