Minor styling changes

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -30,8 +30,12 @@ $addColors: (
   "primary": (
     $primary,
     $primary-invert,
+  ),
+  "primary-light": (
     $primary-light,
     $primary-light-invert,
+  ),
+  "primary-dark": (
     $primary-dark,
     $primary-dark-invert,
   ),
