--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -59,6 +59,7 @@ $colors: mergeColorMaps($colors, $addColors);
 @import "~bulma/sass/elements/box.sass";
 @import "~bulma/sass/elements/button.sass";
 @import "~bulma/sass/elements/container.sass";
+@import "~bulma/sass/elements/content.sass";
 @import "~bulma/sass/elements/title.sass";
 @import "~bulma/sass/elements/icon.sass";
 @import "~bulma/sass/elements/image.sass";
