Text selection styles fixed

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -126,6 +126,10 @@ html {
   box-sizing: inherit;
 }
 
+::selection {
+  background: lighten($main, 40);
+}
+
 main {
   min-height: 100vh;
   display: grid;
